dark mode and css details solved

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 .app__darkmode {
    background-color: #1a2833;
    color: white;
+   min-height: 100vh;
 }
 
 .app__darkmode .app__container{
@@ -11,7 +12,7 @@
 .app__container{
   display: flex;
   flex-direction: column;
-  margin-top: 7rem;
+  margin-top: 1.5rem;
 }
 
 .app__search{
@@ -27,6 +28,20 @@
 
 @media (min-width: 300.99px) and (max-width: 575.98px){
   .app__container{
-    margin-top: 3.5rem;
+    margin-top: 0;
+  }
+
+  .app__darkmode .app__container{
+    margin: 0;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 1000px){
+  .app__container{
+    margin-top: 0;
+  }
+
+  .app__darkmode .app__container{
+    margin: 0;
   }
 }
